[package]
name = "rustbank"
version = "0.1.0"
authors = ["Thomas Timmer <thomas.timmer@bettyblocks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
reqwest = {version = "0.10.7", features = ["blocking", "json"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"